# feedy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/: db.rs  export.rs  main.rs  model.rs  opml.rs  sync.rs  tui.rs  validation.rs
