[package]
name = "feedy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
feed-rs = "2.3"
html2text = "0.16"
open = "5.3"
quick-xml = { version = "0.38", features = ["serialize"] }
ratatui = "0.30.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "gzip"] }
rusqlite = { version = "0.39", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
tempfile = "3.15"
